--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -4145,9 +4145,7 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
   + 通过CA机构公钥可以验证数字证书中的数字签名，从而确保了数字证书的不可伪伪造
 
----
 
-##### 10.介绍一下HTTP中的中间人攻击
 
 
 
@@ -4293,7 +4291,7 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
 ---
 
-#### 应用层可能受到的攻击
+#### 计算机网络安全问题
 
 ##### 1 .**知道SQL注入攻击吗?**
 
@@ -4378,7 +4376,54 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
   6. 同时生成假的加密hash值，发给服务器。
   7. 服务器用私钥解密获得假秘钥。
   8. 服务器用加秘钥加密传输信息
-+ 
++ **服务端在发送浏览器的公钥中加入CA证书，浏览器可以验证CA证书的有效性**
+  - 制作证书：作为服务端的A，首先把自己的公钥key1发给证书颁发机构，向证书颁发机构进行申请证书；证书颁发机构有一套自己的公私钥，CA通过自己的私钥来加密key1,并且通过服务端网址等信息生成一个证书签名，证书签名同样使用机构的私钥进行加密；制作完成后，机构将证书发给A；
+  - 校验证书真伪：当B向服务端A发起请求通信的时候，A不再直接返回自己的公钥，而是返回一个证书；
+    说明：各大浏览器和操作系统已经维护了所有的权威证书机构的名称和公钥。B只需要知道是哪个权威机构发的证书，使用对应的机构公钥，就可以解密出证书签名；接下来，B使用同样的规则，生成自己的证书签名，如果两个签名是一致的，说明证书是有效的；
+    签名验证成功后，B就可以再次利用机构的公钥，解密出A的公钥key1;接下来的操作，就是和之前一样的流程了；
+  - 中间人是否会拦截发送假证书到B呢？
+    因为证书的签名是由服务器端网址等信息生成的，并且通过第三方机构的私钥加密中间人无法篡改； 所以最关键的问题是证书签名的真伪；
+
++  **如何避免遭遇中间人攻击？**
+  + 避免使用公共 WiFi
+  + 对要求你更新密码或是提供用户名等私人信息的邮件或文本消息要时刻保持警惕。这些手段很可能被用来窃取你的身份信息。
+  + **认真对待告警信息**：如果你正在访问的页面以 HTTPS 开头，浏览器可能会出现一则告警信息。例如，站点证书的域名与你尝试访问的站点域名不相匹配。千万不要忽视此类告警信息。听从告警建议，迅速关掉页面。确认域名没有输入错误的情况下，如果情况依旧，要立刻联系站点所有者。
+
+---
+
+##### 7.ARP攻击
+
+ARP攻击就是通过伪造IP地址和MAC地址实现ARP欺骗，能够在网络中产生大量的ARP通信量使网络阻塞，攻击者只要持续不断的发出伪造的ARP响应包就能更改目标主机ARP缓存中的IP-MAC条目，造成网络中断或中间人攻击。
+
+ARP攻击主要是存在于局域网网络中，局域网中若有一个人感染ARP木马，则感染该ARP木马的系统将会试图通过“ARP欺骗”手段截获所在网络内其它计算机的通信信息，并因此造成网内其它计算机的通信故障。
+
+<img src="../图片/ARP攻击.png" width="800px" />
+
+---
+
+##### 8. **什么是SYN攻击？**
+
++ 攻击者短时间伪造不同 IP 地址的 SYN 请求报文，服务端每接收到一个 SYN 报文就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的未连接队列，使得服务器不能为正常用户服务。
+
+---
+
+##### 9. **如何避免SYN攻击？**
+
++ 比如**降低SYN timeout时间**，使得主机尽快释放半连接的占用。
+
++ 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST 复位包、丢弃连接。
+
++ **SYN cookie设置**，就是给每一个请求连接的IP地址分配一个Cookie，如果短时间内连续受到某个IP的重复SYN报文，就认定是受到了攻击，以后从这个IP地址来的包会被丢弃。31. **什么是SYN攻击？**
+
+  + 攻击者短时间伪造不同 IP 地址的 SYN 请求报文，服务端每接收到一个 SYN 报文就进入 SYN_RCVD 状态，但服务端发送出去的 ACK + SYN 报文，无法得到未知 IP 主机的 ACK 应答，久而久之就会占满服务端的未连接队列，使得服务器不能为正常用户服务。
+
+  ---
+
+  ##### 32. **如何避免SYN攻击？**
+
+  + 比如**降低SYN timeout时间**，使得主机尽快释放半连接的占用。
+  + 当网卡接收数据包的速度大于内核处理的速度时，会有一个队列保存这些数据包。超出处理能时，对新的 SYN 直接回报 RST 复位包、丢弃连接。
+  + **SYN cookie设置**，就是给每一个请求连接的IP地址分配一个Cookie，如果短时间内连续受到某个IP的重复SYN报文，就认定是受到了攻击，以后从这个IP地址来的包会被丢弃。
 
 ---
 
