--- a/C++ 11并发编程/2. 线程管理.md
+++ b/C++ 11并发编程/2. 线程管理.md
@@ -47,13 +47,36 @@ std::thread my_thread([]{
 });//直接使用Lambda表达式
 ```
 
+警惕特殊情况：当 线程函数持有局部变量的指针或引用，且函数退出时线程尚未结束，如下例所示：
+
+```c++
+struct func {
+  	int& i;
+  	func(int& i_) : i(i_) {}
+  	void operator()(){
+        for(unsigned j = 0; j < 100000; ++j)
+          	dosomething(i);
+  	}
+}
+void oops() {
+  	int local = 0;
+  	func myfunc(local);							
+  	std::thread my_thread(myfunc);
+  	my_thread.detach();
+}
+```
+
+因为detach()进行了分离，所以可能出现oops()函数结束运行后，my_thread线程仍没有运行结束，此时`dosomething(i);` 会访问一个已被销毁的变量。
+
+所以在一个访问局部变量 的函数中 创建线程是一个糟糕的设计，除非保证线程在函数退出前完成。
+
 ### 2.等待线程
 
 > 为了防止主线程结束之前，使用局部变量引用的子线程还在调用，就需要让主线程等待子线程。
 
 如果需要等待线程，相关的`std::thread`实例需要使用join()。join()是简单粗暴的等待线程完成或不等待。
 
->  当你需要对等待中的线程有更灵活的控制时，比如，看一下某个线程是否结束，或者只等待一段时间(超过时间就判定为超时)。想要做到这些，你需要使用其他机制来完成，比如条件变量和*期待*(futures)，相关的讨论将会在第4章继续。
+>  当你需要对等待中的线程有更灵活的控制时，比如，看一下某个线程是否结束，或者只等待一段时间(超过时间就判定为超时)。想要做到这些，你需要使用其他机制来完成，比如条件变量和期待(futures)。
 
 调用join()的行为，会清理了线程相关的存储部分，这样`std::thread`对象将不再与已经完成的线程有任何关联。这意味着，只能对一个线程使用一次join();一旦已经使用过join()，`std::thread`对象就不能再次加入了，当对其使用joinable()时，将返回false。
 
@@ -68,8 +91,7 @@ public:
     explicit thread_guard(std::thread& t_):t(t_) {}
     ~thread_guard() {
       if(t.joinable()){ // 1
-
-        t.join();      // 2
+        t.join();       // 2
       }
     }
     thread_guard(thread_guard const&)=delete;   // 3
@@ -114,16 +136,15 @@ assert(!t.joinable());
 
 ## 二.传递参数给线程函数
 
-### 情况1
+### 1.隐式构造
 
 ```c++
 void f(int i,std::string const& s);
-void oops(int some_param)
-{
-  char buffer[1024]; // 1
-  sprintf(buffer, "%i",some_param);
-  std::thread t(f,3,buffer); // 2
-  t.detach();
+void oops(int some_param){
+    char buffer[1024]; // 1
+    sprintf(buffer, "%i", some_param);
+    std::thread t(f,3,buffer); // 2
+    t.detach();
 }
 ```
 
@@ -133,25 +154,24 @@ buffer②是一个指针变量，指向本地变量，然后本地变量通过bu
 
 ```c++
 void f(int i,std::string const& s);
-void not_oops(int some_param)
-{
+void not_oops(int some_param){
     char buffer[1024];
     sprintf(buffer,"%i",some_param);
-    std::thread t(f,3,std::string(buffer));  // 使用std::string，避免悬垂指针
+    std::thread t(f, 3, std::string(buffer));  // 使用std::string，避免悬垂指针
     t.detach();
 }
 ```
 
-### 情况2
+### 2.传递引用
 
 期望传递一个引用，但整个对象被复制了。当线程更新一个引用传递的数据结构时，这种情况就可能发生，比如：
 
 ```c++
-void update_data_for_widget(widget_id w,widget_data& data); // 1
-void oops_again(widget_id w)
-{
+void update_data_for_widget(widget_id w, widget_data& data); // 1
+
+void oops_again(widget_id w){
     widget_data data;
-    std::thread t(update_data_for_widget,w,data); // 2
+    std::thread t(update_data_for_widget, w, data); // 2
     display_status();
     t.join();
     process_widget_data(data); // 3
@@ -167,12 +187,12 @@ void oops_again(widget_id w)
 可以使用`std::ref`将参数转换成引用的形式，从而可将线程的调用改为以下形式：
 
 ```c++
-std::thread t(update_data_for_widget,w,std::ref(data));
+std::thread t(update_data_for_widget, w, std::ref(data));
 ```
 
 在这之后，update_data_for_widget就会接收到一个data变量的引用，而非一个data变量拷贝的引用。
 
-### 情况3
+### 3.对象成员函数与对象地址
 
 因为`std::thread`构造函数和`std::bind`的操作都在标准库中定义好了，可以传递一个成员函数指针作为线程函数，并提供一个合适的对象指针作为第一个参数：
 
@@ -187,7 +207,7 @@ std::thread t(&X::do_lengthy_work,&my_x); // 1
 
 这段代码中，新线程将my_x.do_lengthy_work()作为线程函数；my_x的地址①作为指针对象提供给函数。
 
-### 情况4
+### 4.参数移动
 
 如果提供的参数可以 **移动**，但不能 **拷贝** 。比如`std::unique_ptr`就是这样一种类型。
 
@@ -198,7 +218,7 @@ void process_big_object(std::unique_ptr<big_object>);
 
 std::unique_ptr<big_object> p(new big_object);
 p->prepare_data(42);
-std::thread t(process_big_object,std::move(p));
+std::thread t(process_big_object, std::move(p));
 ```
 
 通过在`std::thread`的构造函数中指定`std::move(p)`,big_object对象的所有权就被首先转移到新创建线程的的内部存储中，之后传递给process_big_object函数。
@@ -209,45 +229,45 @@ std::thread t(process_big_object,std::move(p));
 
 假设要写一个在后台启动线程的函数，想通过新线程返回的所有权去调用这个函数，而不是等待线程结束再去调用；或完全与之相反的想法：创建一个线程，并在函数中转移所有权，都必须要等待线程结束。总之，新线程的所有权都需要转移。这就是移动引入`std::thread`的原因。
 
-`std::thread`支持移动，就意味着线程的所有权很容易地从一个函数中被转移出去。
+`std::thread`支持移动，就意味着线程的 **所有权很容易地从一个函数中被转移出去** 。
 
 ```c++
 std::thread f(){
-  void some_function();
-  return std::thread(some_function);
+    void some_function();
+    return std::thread(some_function);
 }
 
 std::thread g(){
-  void some_other_function(int);
-  std::thread t(some_other_function,42);
-  return t;
+    void some_other_function(int);
+    std::thread t(some_other_function,42);
+    return t;
 }
 ```
 
-如果要把所有权转移到函数中，它只能以值的形式接受 `std::thread` 的实例作为其中一个参数。
+如果要 **把所有权转移到函数中** ，它只能以值的形式接受 `std::thread` 的实例作为其中一个参数。
 
 ```c++
 void f(std::thread t);
 void g(){
-  void some_function();
-  f(std::thread(some_function));
-  std::thread t(some_function);
-  f(std::move(t));
+    void some_function();
+    f(std::thread(some_function));
+    std::thread t(some_function);
+    f(std::move(t));
 }
 ```
 
-定义了scoped_thread类，使得某个对象转移了线程的所有权后，不能对线程进行加入或分离。确保了线程程序退出前完成。
+定义scoped_thread类，使得某个对象转移了线程的所有权后，不能对线程进行加入或分离。确保了线程程序退出前完成
 
 ```c++
 class scoped_thread{
   	std::thread t;
 public:
   	explicit scoped_thread(std::thread t_): t(std::move(t_)) {             // 1
-    if(!t.joinable())                                     // 2
-      	throw std::logic_error(“No thread”);
+        if(!t.joinable())                                  							   // 2
+            throw std::logic_error(“No thread”);
   	}
     ~scoped_thread(){
-      	t.join();                                            // 3
+      	t.join();                                         							   // 3
     }
     scoped_thread(scoped_thread const&)=delete;
     scoped_thread& operator=(scoped_thread const&)=delete;
@@ -257,14 +277,14 @@ struct func; // 定义在清单2.1中
 
 void f(){
     int some_local_state;
-    scoped_thread t(std::thread(func(some_local_state)));    // 4
+    scoped_thread t(std::thread(func(some_local_state))); 							   // 4
     do_something_in_current_thread();
 }                 
 ```
 
 + 这里新线程是直接传递到scoped_thread中④，而非创建一个独立的命名变量。
 + 当主线程到达f()函数的末尾时，scoped_thread对象将会销毁，然后加入③到的构造函数①创建的线程对象中去。
-+ 而在清单2.3中的thread_guard类，就要在析构的时候检查线程是否"可加入"。这里把检查放在了构造函数中②，并且当线程不可加入时，抛出异常。
++ 在析构的时候检查线程是否"可加入"。这里把检查放在了构造函数中②，并且当线程不可加入时，抛出异常。
 
 ---
 
