--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -2275,6 +2275,118 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 ---
 
+##### 2.使用多进程与多线程的场景以及优缺点
+
++ 使用多进程
+
+  + 优点：
+
+    1. OS在进程间提供附加的保护操作和更高级别的通信机制，意味着可以更容易编写安全的并发代码。
+    2. 利用远程连接在不同机器上运行独立的进程。虽然增加了通信成本，但在设计精良的系统上，是一个提高并行可用行和性能的低成本方式。
+
+  + 缺点：
+
+    1. 进程之间的通信通常不是设置复杂，就是速度慢
+
+       >  因为OS会在进程间提供了一定的保护措施，以避免一个进程去修改另一个进程的数据。
+
+    2. 运行多个进程所需的固定开销：需要时间启动进程，操作系统需要内部资源来管理进程，等等。
+
++ 使用多线程：
+
+  + 优点：
+    1. 虽然进程间可以共享内存，但难以建立和管理。因为同一数据的内存地址在不同进程中不相同。线程会好很多
+    2. 使用多线程的开销远远小于使用多进程。因为地址空间共享以及缺少线程间数据的保护，使OS记录工作量减小
+
+  + 缺点：
+    1. 共享内存的灵活性是有代价的：如果数据要被多个线程访问，必须确保每个线程所访问到的数据是一致的；这同样也意味着需要对线程通信做大量的工作。
+
++ 使用场景分析：
+
+  + 理论分析：
+
+    + 需要频繁创建销毁的优先用线程（进程的创建和销毁开销过大）
+
+      > Web服务器，来一个连接建立一个线程，断了就销毁线程，要是用进程，创建和销毁的代价是很难承受的
+
+    + 需要进行大量计算的优先使用线程（CPU频繁切换）
+
+    + 强相关的处理用线程，弱相关的处理用进程
+
+      >  一般的Server需要完成如下任务：消息收发、消息处理。
+      >
+      > “消息收发”和“消息处理”就是弱相关的任务，而“消息处理”里面可能又分为“消息解码”、“业务处理”，这两个任务相对来说相关性就要强多了。因此“消息收发”和“消息处理”可以分进程设计，“消息解码”、“业务处理”可以分线程设计。
+
+    + 多机分布的用进程，多核分布的用线程
+
+  + 具体情景：
+
+    + Chrome浏览器也是多进程方式。 
+
+      > ①可能存在一些网页不符合编程规范，容易崩溃，采用多进程一个网页崩溃不会影响其他网页；多线程会
+      >
+      > ②网页之间互相隔离，保证安全，不必担心某个网页中的恶意代码会取得存放在其他网页中的敏感信息。
+
+    + 桌面软件，响应用户输入的是一个线程，后台程序处理是另外的线程； 
+
+---
+
+##### 3.创建线程的几种方式
+
++ 直接通过函数来进行创建
+
++ 利用lambda表达式来进行创建
++ 利用bind函数和类对象进行创建
+
+```c++
+class Test{
+public:
+    void test()  {
+        cout << "This is a new Thread! "<< endl;
+    }
+};
+void Print()  {
+    cout << "This is a new Thread2! "<< endl;
+}
+int main(){
+    Test t;
+    std::thread thread1(std::bind(&Test::test,&t));
+    std::thread thread2(Print);
+    std::thread thread3([](){  cout << "This is a new Thread3! "<< endl;  });
+    thread1.join();
+    thread2.join();
+    thread3.join();
+}
+```
+
+---
+
+##### 4.创建线程时需要注意的一种情况
+
+```c++
+class background_task{
+public:
+    void operator()() const{
+        do_something();
+        do_something_else();
+    }
+};
+std::thread my_thread(background_task());		 // 1
+std::thread my_thread((background_task()));  // 2
+std::thread my_thread{background_task()};    // 3
+```
+
++ 1**相当与声明了一个名为my_thread的函数** ，函数带有一个参数(函数指针指向没有参数并返回background_task对象的函数)，返回 `std::thread` 对象的函数，而非启动了一个线程。
++ 2 额外的括号避免其解释为函数声明，声明成 `std::thread` 对象类型
++ 3 使用统一的初始化语法
++ 当然，也可以直接使用Lambda表达式
+
+---
+
+
+
+---
+
 ##### 2.介绍一下 join与datach
 
 + join：主线程会在join处一直阻塞，直到子线程完成，`join()`另一个任务是回收该线程中使用的资源。
