--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -2383,7 +2383,44 @@ std::thread my_thread{background_task()};    // 3
 
 ---
 
+##### 5.并发编程可能遇到的问题
 
++ 由于 编译器的 优化，可能出现  代码执行顺序的丧失
+
+  ```css
+  long  sum  = 0;
+  void add() {
+    	for(int i = 0; i <  1000000; ++i) sum++;
+  }
+  int  main() {
+    	pthread_t p1,p2;
+    	pthread_create(&p1, NULL, add, NULL);
+    	pthread_create(&p2, NULL, add, NULL);
+    	pthread_join(p1);
+    	pthread_join(p2);
+  }
+  ```
+
+  > 不同的 编译优化下(O1,O2,O3)，会出现不同的结果；
+  >
+  > 解决方案：使用volatile定义 变量，防止编译器的优化
+
++ 由于中断/并行，出现原子性的 丧失
+
+  > 支付程序，如果没有保证执行的 顺序，会出现严重的后果
+
++ 由于乱序执行，出现 可见性的丧失 
+
+  ```css
+  #code
+  movl $1,(x)
+  movl (y), eax
+  #Excution原因：将数据从内存中取出需要花费时间，如果x与y之间没有联系，则可以乱序执行
+  movl (y), eax
+  movl $1,(x)
+  ```
+
+  > 解决方式，可以使用 barrier();  穿插在多个指令之间防止优化
 
 ---
 
