--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -921,8 +921,6 @@ int main() {
 + 面向对象是将数据与操作这些数据的函数方法联系在一起。
 + 泛型编程将数据与函数方法分开，利用迭代器来进行操作。分开来可以让容器与算法进行单独的设计，利用迭代器来进行沟通实现。
 
-
-
 ---
 
 ##### 15.32位于64位字节大小
@@ -1142,12 +1140,6 @@ int main(){
 ---
 
 ### C++基本介绍
-
----
-
-+  struct和union的区别
-
----
 
 ##### ==1. 聊一聊C++面向对象的三大特性==
 
@@ -1478,7 +1470,7 @@ void print(char a, int b); // print_ci
 
 ##### 2.拷贝构造函数与赋值运算符重载的区别
 
-+  赋值运算符是运算符重载，拷贝构造函数是函数
++  拷贝构造函数是函数，赋值运算符是运算符重载
 +  赋值运算符需要检查是否和源对象相同，不相同时，如果原对象有内存分配的话，需要先把内存释放掉。拷贝构造函数是直接构造一个新的类对象，不需要比对。
 +  并不是所有出现"="的地方 都是使用赋值运算符重载，新建对象使用 “=” 时会调用拷贝构造函数。
 
