--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -895,6 +895,8 @@ auto Print =  bind(print, ref(os), _1, ' ');//对，用ref返回的对象包含o
 
 ---
 
+#### 序列容器
+
 ##### 3.vector的内存管理
 
 + v.size()：获得容器中有多少元素
@@ -1045,7 +1047,55 @@ struct __deque_iterator
 + priority_queue，优先队列，是一个拥有权值观念的queue，它跟queue一样是顶部入口，底部出口，在插入元素时，元素并非按照插入次序排列，它会自动根据权值(通常是元素的实值)排列，权值最高，排在最前面。
 + 默认情况下，priority_queue使用一个max-heap完成，底层容器使用的是一般为vector为底层容器，堆heap 为处理规则来管理底层容器实现 。priority_queue的这种实现机制导致其不被归为容器，而是一种容器配接器。
 
-##### 15. **map、set是怎么实现的，红黑树是怎么能够同时实现这两种容器? 为 什么使用红黑树?**
+---
+
+#### 关联容器
+
+实现在C++中，set 和 map 分别提供了以下三种数据结构，其底层实现以及优劣如下表所示：
+
+| 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::set`           | 红黑树   | 有序     | 否               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::multiset`      | 红黑树   | 有序     | 是               | 否           | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_set` | 哈希表   | 无序     | 否               | 否           | $O(1)$     | $O(1)$     |
+
+`std::unordered_set`底层实现为哈希表，`std::set` 和`std::multiset` 的底层实现是红黑树， **红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。**
+
+| 映射                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
+| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
+| `std::map`           | 红黑树   | Key有序  | key不可重复      | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::multimap`      | 红黑树   | Key有序  | key可重复        | key不可修改  | $O(log_n)$ | $O(log_n)$ |
+| `std::unordered_map` | 哈希表   | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
+
+`std::unordered_map` 底层实现为哈希表，`std::map` 和`std::multimap` 的底层实现是红黑树。同理，`std::map` 和`std::multimap` 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
+
+当我们要使用集合来解决哈希问题的时候，优先使用unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用set，如果要求不仅有序还要有重复数据的话，那么就用multiset。
+
+##### 1.红黑树基础介绍
+
++ 红黑树是一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是 Red或 Black。 通过对任何一条从根到叶子的路径上各个结点着色方式的限制，确保没有一条路径会比其他路径长出两倍，因而是接近平衡的。
+
++ 红黑树在二叉查找树的基础上增加了着色和相关的性质使得红黑树相对平衡，保证了一棵 n 个结点的红黑树始终保持了 Iogn 的高度，从而保证了红黑树的查找 、 插入、删除的时间复杂度最坏为 O(logn)。性质如下：
+
+  + 每个结点要么是红的要么是黑的
+  + 根结点是黑的
+  + 每个叶结点都是黑的
+  + 如果一个结点是红的，那么它的两个儿子都是黑的
+  + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
+
++ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。
+
+  > 场景：插入删除频繁。Nginx用红黑树管理定时器，EPOLL用红黑树管理监听的事件。
+
++ AVL：要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作，维护这种高度平衡所付出的代价比从中获得的效率收益还大。
+
+  > 应用：场景中对插入删除不频繁，只是对查找要求较高，AVL更好。 **Windows NT内核中广泛存在**
+
++ 至于普通的二叉搜索树，可能出现瘸腿现象，展现为链表，时间复杂度为 n 。
+
+---
+
+##### 2. **map、set是怎么实现的，红黑树是怎么能够同时实现这两种容器? 为什么使用红黑树?**
 
 + 他们的底层都是以红黑树的结构实现，因此插入删除等操作都在O(logn)时间内完成，因此可以完成高效的插入删除;
 + 定义了一个模版参数，如果它是key那么它就是set，如果它是map，那么它就是map；底层是红黑树，实现map的红黑树的节点数据类型是key+value，而实现set的节点数据类型是value
@@ -1053,7 +1103,7 @@ struct __deque_iterator
 
 ---
 
-##### 16. 红黑树的迭代器是什么？++和--怎么实现？
+##### 3. 红黑树的迭代器是什么？++和--怎么实现？
 
 + 红黑树的节点和迭代器均采用了双层结构：
   - 节点：\__rb_tree_node继承自__rb_tree_node_base
@@ -1139,14 +1189,33 @@ struct __rb_tree_base_iterator{
 
 ---
 
-##### 17. map中[] 与 find 的区别
+##### 4. map中[] 与 find 的区别
 
 + map的下标运算符[]的作用是:将关键码作为下标去执行查找，并返回对应的值；如果不存在这个关键码，就将一个具有该关键码和值类型的默认值的项插入这个map。
 + map的find函数用关键码执行查找，找到了返回该位置的迭代器;如果不存在这个关键码，就返回尾迭代器。
 
 ---
 
-##### 18. hashtable怎么实现的？
+##### 5.哈希表
+
++ 哈希表是根据关键码的值而直接进行访问的数据结构。数组就是一张哈希表。 关键码是数组的索引下表，通过下表直接访问数组中的元素。
++ 一般哈希表都是用来快速判断一个元素是否出现集合里。
++ 哈希函数，把值直接映射到哈希表上的索引，通过查询索引快速知道值是否在表中。
+
++ **<font color = red>此时为了保证映射出来的索引数值都落在哈希表上，再次对数值做一个取模的操作，保证值可以映射到哈希表上了。</font>** 如果元素数量大于哈希表的大小，会有元素同时映射到同一个索引下表的位置。出现 **「哈希碰撞」**。
+
+解决哈希碰撞的方法：
+
++ 拉链法：
+  + 位置发生了冲突，发生冲突的元素都被存储在链表中。
+  + 拉链法就是要选择适当的哈希表的大小，数组空值会浪费大量内存，链表太长会在查找上浪费太多时间。
++ 线性探测法：
+  + 使用线性探测法，一定要保证tableSize大于dataSize。依靠哈希表中的空位来解决碰撞问题。
+  + 例如冲突的位置，放了A，那么就向下找一个空位放置B的信息。所以要求tableSize一定要大于dataSize ，要不然哈希表上就没有空置的位置来存放冲突的数据了。
+
+---
+
+##### 6. hashtable怎么实现的？
 
 <img src="../图片/STL_Hash_table.png" width="500px" />
 
@@ -1154,56 +1223,10 @@ struct __rb_tree_base_iterator{
 + 在hashtable设计bucket的数量上，其内置了28个质数[53, 97, 193,...,429496729]，在创建hashtable时，会根据存入的元素个数选择大于等于元素个数的质数作为hashtable的容量(vector的长度)，
 + 其中每个bucket 所维护的linked-list长度也等于hashtable的容量。如果插入hashtable的元素个数超过了bucket的容量，就要进行重建table操作，即找出下一个质数，创建新的buckets vector，重新计算元素在新hashtable的位置。
 
-##### 19. Hashmap扩容会发生什么？
+##### 7. Hashmap扩容会发生什么？
 
 + 如果是bucket vector扩容，而vector容器本身具有动态扩容能力，无需人工干预。
 + 首先尝试从目前所指的节点出发，前进一个位置(节点)，由于节点被安置于list内，所 以利用节点的next指针即可轻易完成前进操作，如果目前正巧是list的尾端，就跳至下一个bucket身上， 那正是指向下一个list的头部节点。
-
----
-
-##### 20.关联容器
-
-实现在C++中，set 和 map 分别提供了以下三种数据结构，其底层实现以及优劣如下表所示：
-
-| 集合                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
-| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
-| `std::set`           | 红黑树   | 有序     | 否               | 否           | $O(log_n)$ | $O(log_n)$ |
-| `std::multiset`      | 红黑树   | 有序     | 是               | 否           | $O(log_n)$ | $O(log_n)$ |
-| `std::unordered_set` | 哈希表   | 无序     | 否               | 否           | $O(1)$     | $O(1)$     |
-
-`std::unordered_set`底层实现为哈希表，`std::set` 和`std::multiset` 的底层实现是红黑树， **红黑树是一种平衡二叉搜索树，所以key值是有序的，但key不可以修改，改动key值会导致整棵树的错乱，所以只能删除和增加。**
-
-| 映射                 | 底层实现 | 是否有序 | 数值是否可以重复 | 能否更改数值 | 查询效率   | 增删效率   |
-| -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
-| `std::map`           | 红黑树   | Key有序  | key不可重复      | key不可修改  | $O(log_n)$ | $O(log_n)$ |
-| `std::multimap`      | 红黑树   | Key有序  | key可重复        | key不可修改  | $O(log_n)$ | $O(log_n)$ |
-| `std::unordered_map` | 哈希 表  | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
-
-`std::unordered_map` 底层实现为哈希表，`std::map` 和`std::multimap` 的底层实现是红黑树。同理，`std::map` 和`std::multimap` 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
-
-当我们要使用集合来解决哈希问题的时候，优先使用unordered_set，因为它的查询和增删效率是最优的，如果需要集合是有序的，那么就用set，如果要求不仅有序还要有重复数据的话，那么就用multiset。
-
-##### 1.红黑树基础介绍
-
-+ 红黑树是一种二叉查找树，但在每个结点上增加一个存储位表示结点的颜色，可以是 Red或 Black。 通过对任何一条从根到叶子的路径上各个结点着色方式的限制，确保没有一条路径会比其他路径长出两倍，因而是接近平衡的。
-
-+ 红黑树在二叉查找树的基础上增加了着色和相关的性质使得红黑树相对平衡，保证了一棵 n 个结点的红黑树始终保持了 Iogn 的高度，从而保证了红黑树的查找 、 插入、删除的时间复杂度最坏为 O(logn)。性质如下：
-
-  + 每个结点要么是红的要么是黑的
-  + 根结点是黑的
-  + 每个叶结点都是黑的
-  + 如果一个结点是红的，那么它的两个儿子都是黑的
-  + 对于任意结点而言，从一个节点到该节点的子孙节点的所有路径上包含相同数目的黑节点。
-
-+ 红黑树性能比较高，插入删除时间复杂度保持在logn。和AVL相比，要求不是那么严格，它只要求到叶节点的最长路径不超过最短路径的两倍。
-
-  > 场景：插入删除频繁。Nginx用红黑树管理定时器，EPOLL用红黑树管理监听的事件。
-
-+ AVL：要求左右子树相差高度不超过一，简单的插入或者删除都会导致树的不平衡需要旋转操作，维护这种高度平衡所付出的代价比从中获得的效率收益还大。
-
-  > 应用：场景中对插入删除不频繁，只是对查找要求较高，AVL更好。 **Windows NT内核中广泛存在**
-
-+ 至于普通的二叉搜索树，可能出现瘸腿现象，展现为链表，时间复杂度为 n 。
 
 ---
 
@@ -1237,25 +1260,6 @@ struct __rb_tree_base_iterator{
   + 先做右旋转，形成rightright情况，再做左旋转
 
   <img src="../图片/AVL右左旋转1.png" width="300px" /><img src="../图片/AVL右左旋转2.png" width="250px" />
-
----
-
-##### 2.哈希表
-
-+ 哈希表是根据关键码的值而直接进行访问的数据结构。数组就是一张哈希表。 关键码是数组的索引下表，通过下表直接访问数组中的元素。
-+ 一般哈希表都是用来快速判断一个元素是否出现集合里。
-+ 哈希函数，把值直接映射到哈希表上的索引，通过查询索引快速知道值是否在表中。
-
-+ **<font color = red>此时为了保证映射出来的索引数值都落在哈希表上，再次对数值做一个取模的操作，保证值可以映射到哈希表上了。</font>** 如果元素数量大于哈希表的大小，会有元素同时映射到同一个索引下表的位置。出现 **「哈希碰撞」**。
-
-解决哈希碰撞的方法：
-
-+ 拉链法：
-  + 位置发生了冲突，发生冲突的元素都被存储在链表中。
-  + 拉链法就是要选择适当的哈希表的大小，数组空值会浪费大量内存，链表太长会在查找上浪费太多时间。
-+ 线性探测法：
-  + 使用线性探测法，一定要保证tableSize大于dataSize。依靠哈希表中的空位来解决碰撞问题。
-  + 例如冲突的位置，放了A，那么就向下找一个空位放置B的信息。所以要求tableSize一定要大于dataSize ，要不然哈希表上就没有空置的位置来存放冲突的数据了。
 
 ---
 
