--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -255,7 +255,7 @@
 
 ### 设计模式
 
-##### 4.单例模式
+##### 1.单例模式
 
 + 确保某一个类只有一个实例，而且自行实例化并向整个程序提供这个实例。
 
@@ -283,7 +283,7 @@
 
 ---
 
-##### 5.工厂模式
+##### 2.工厂模式
 
 + 定义一个创建对象的接口，让其子类自己决定实例化哪一个类，工厂模式使其创建过程延迟到子类进行。
 +  **简单工厂模式：**
@@ -321,15 +321,242 @@
 
 ---
 
-##### 6.工厂模式加入模板类——模板工厂
+##### 3.工厂模式加入模板类——模板工厂
 
 + 将抽象工厂与具体工厂都写成模板的形式
 
 ---
 
+### 链接与库
+
+##### 1.介绍一下静态库与动态库
+
+- 库是写好的现有的，成熟的，可以复用的代码。本质上是可执行代码的二进制形式。
+- 静态库（.a、.lib）和动态库（.so、.dll）。所谓静态、动态是指链接
+- 静态库：
+  - 将可重定位目标文件以一种特定的方式打包成一个单独的文件`lib**.a`，在链接时，将其内容拷贝到可执行文件中。
+  - 优点：
+    - 可执行程序中具备了执行程序需要的所有内容， 执行时运行速度快。
+  - 缺点：
+    - 每个可执行程序中都有目标文件的一份副本，会造成空间浪费
+    - 每次修改完库代码，都需要重新进行编译链接形成可执行程序，更新困难。
+- 动态库：
+  - 和静态库类似，打包成`lib.**so`文件，不同的是，在链接时仅仅“拷贝”一些重定位和符号表信息，在程序运行时完成真正的链接过程。
+  - 优点：
+    - 即使每个程序都依赖同一个库，在执行时共享同一份副本，节省了空间
+    - 更新时只需要替换原来的目标文件，而无需再重新链接一遍，更新方便
+  - 缺点：
+    - 把链接推迟到了程序运行时，所以每次执行程序都需要进行链接，会有性能损耗
+
+---
+
+##### 2. 静态链接库和动态链接库会加载在内存的哪里
+
+- 静态库在链接时与程序一起链接成可执行文件，然后在内存中装载运行：虚拟内存中分布在
+  - 代码段（.text）: 程序源代码编译后的机器指令
+  - 已初始化数据段（.data）: 已初始化了的全局变量和局部静态变量数据
+  - 未初始化段（.bss）:未初始化的全局变量和局部静态变量
+- 动态库装载在堆与栈中间的文件映射段
+
+---
+
+##### ==3. **一个程序从开始运行到结束的完整过程，你能说出来多少?**==
+
+> 以运行hello.c文件为例子：
+>
+> 1. 使用预处理器，将源程序 hello.c 翻译成ASCII的中间文件 hello.i		                    `gcc -E hello.c -o hello.i` 
+> 2. 使用编译器，将 hello.i 生成 汇编语言文件 hello.s                                                   `gcc -S hello.i -o hello.s`
+> 3. 使用汇编器，将 hello.s 翻译成 可执行目标文件 hello.o                                          `gcc -c hello.s -o hello.o`
+> 4. 使用连接器，将hello.o 和一些必要的系统目标文件链接成可执行文件 hello        `gcc hello.o -o hello`
+
+- 预编译： 运行C预处理器(cpp)将C的源程序 hello.c 翻译成一个ASCII码的中间文件 hello.i. 
+
+  > `gcc -E hello.c -o hello.i`
+
+  - 处理 “#include” 预编译指令，将文件内容替换到它的位置
+  - 删除所有的#define，展开所有的宏定义。 
+  - 处理所有的条件预编译指令，如 “#if”、“#endif”、“#ifdef”
+  - 删除所有的注释
+  - 添加行号和文件标识，便于编译时编译器产生调试用的行号信息
+
+- 编译：驱动程序运行C编译器(gcc)，将hello.i翻一个一个ASCII汇编语言文件hello.s
+
+  > `gcc -S hell0.i -o hello.s`
+
+  1. 把预编译之后生成的xxx.i或xxx.ii文件，进行一系列词法分析、语法分析、语义分析及优化后，生成相应的汇编代码文件。
+  2. 词法分析：将源代码程序输入到扫描机中，将其中的字符序列分割成一系列的记号，类似于有限状态机
+  3. 语法分析：对由扫描器产生的记号进行语法分析，产生语法树。语法分析器完成的是对表达式语法层面的分析
+  4. 语义分析：语义分析器则对表达式是否有意义进行判断，其分析的语义是静态语义——在编译期能分期的语义，相对应的动态语义是在运行期才能确定的语义。
+  5. 优化：源代码级别的一个优化过程。 
+  6. 目标代码生成：由代码生成器将中间代码转换成目标机器代码，生成一系列的代码序列——汇编语言表示。
+  7. 目标代码优化：目标代码优化器对上述的目标机器代码进行优化，寻找合适的寻址方式、使用位移来替代乘法运算、删除多余的指令等。
+
+- 汇编：运行汇编器(as)，将 hello.s 翻译成一个可重定位目标文件 hello.o
+
+  > `gcc -c hell0.s -o hello.o`
+
+  - 汇编器用来将汇编语言源程序转换为机器指令序列。
+  - 汇编结果是一个 可重定位目标文件 (如hello.o)，其中包含的是不可读的二进制代码，必须用相应的工具软件来查看其内容。
+
+- 链接： 运行连接器程序**(ld)**，将**hello.o**和一些必要的系统目标文件组合起来，创建一个可执行文件**prog**:
+
+  > `gcc hell0.o -o hello`
+
+  - 将不同的源文件产生的目标文件进行链接，从而形成一个可以执行的程序。链接分为静态链接和动态链接:
+    - 静态链接：
+      - 对函数库的链接是放在编译时期完成的是静态链接 。 所有相关的目标文件与牵涉到的函数库被链接合成一个可执行文件。Linux下文件名为`libxxx.a`的形式 。
+    - 动态链接：
+      - 把程序按照模块拆分成各个相对独立部分，库函数的链接载入推迟到程序运行时才链接在一起形成一个完整的程序，动态库文件名`lib**.so`。
+
+---
+
+##### 4. **介绍一下静态库与动态库的创建与使用**
+
+- **静态库**
+
+  - **静态库命名规则：** lib + 库的名字 + .a
+
+  - **制作规则：**
+
+    - **生成对应的.o文件：** 参数 -c
+    - **将生成的.o文件进行打包：** ar rcs + 静态库的名字(libMyCal.a) + 生成的所有.o文件
+
+  - **发布和使用静态库：**
+
+    - 发布静态库
+    - 头文件
+
+  - **例子：**
+
+    <div align = center><img src="../图片/链接2.png" width="250px" /></div>
+
+    - include文件夹存放头文件，src文件夹存放源文件，lib文件夹存放生成的库文件
+
+    - 生成.o文件
+
+      ```
+       gcc *.c -c -I ../include 
+      ```
+
+    - 打包
+
+      ```
+       ar rcs libMyCal.a *.o
+       mv libMyCal.a ../lib
+      ```
+
+      <div align = center><img src="../图片/链接3.png" width="210px" /></div>
+
+    - 利用头文件和静态库来运行程序
+
+      ```
+       gcc main.c lib/libMyCal.a -o sum -I include
+      ```
+
+      ```
+       # -I include头文件
+       # -L 库的目录
+       # -l 库的名字，去头去尾
+       gcc main.c -I include -L lib -l MyCal -o sum
+      ```
+
+  - 利用 nm命令 查看静态库内容
+
+    <div align = center><img src="../图片/链接4.png" width="300px" /></div>
+
+- 动态库
+
+  - **动态库命名规则：** lib + 库的名字 + .so
+
+  - **制作步骤：**
+
+    - **生成与位置无关的代码(.o) ：** 参数 -fPIC -c
+
+      <div align = center><img src="../图片/链接5.png" width="500px" /></div>
+
+      > - 静态库.o在代码段每次位置都相同，所以是与位置有关。
+      > - 动态库不会打包到程序中，只有在运行到需要时才会加载到共享库区域，每次加载时放入的位置都不同，所以与位置无关。
+
+    - **将.o打包成动态库：** `gcc -shared  -o libMyCal.so *.o -I include`
+
+  - **例子：**
+
+    - 生成.o文件
+
+      ```
+       gcc -fPIC -c *.c -I ../include
+      ```
+
+    - 打包成共享库
+
+      ```
+       gcc -shared  -o libMyCal.so *.o -I ../include
+       mv libMyCal.so ../lib
+      ```
+
+      <div align = center><img src="../图片/链接6.png" width="250px" /></div>
+
+    - 利用动态库和头文件来运行程序
+
+      ```
+       gcc main.c lib/libMyCal.so -o mysum -I include
+       
+       gcc main.c -I include -L ./lib -l MyCal -o mysum
+      ```
+
+      <div align = center><img src="../图片/链接7.png" width="800px" /></div>
+
+      > 没有给动态链接器指定动态库libMyCal.so的路径
+
+  - **解决动态链接库失败的问题**
+
+    - 直接放入系统库目录——不推荐
+
+    - 利用export LD_LIBRARY_PATH=目录 来临时添加，终端关闭后会失效
+
+    - 将上述方法写入bashrc——也不推荐
+
+    - 找到动态连接器的配置文件 
+
+      ```
+       cd /etc
+       sudo vim ld.so.conf
+       # 动态库的路径写入配置文件
+       /Users/zhangyongbin/Desktop/Cal/lib
+       # 更新
+       sudo ldconfig -v
+      ```
+
+---
+
+##### 6.多个动态库的连接顺序有区别吗，顺序怎么排
+
++ gcc中库的链接顺序是从右往左进行，所以要把最基础实现的库放在最后，这样左边的lib就可以调用右边的lib中的代码。这样才能避免undefined reference的错误，完成编译链接。
+
+---
+
+##### 7. **gcc 与 g++ 的区别？**
+
+- 从文件角度：
+  - 后缀为 .c 的， gcc 把它当作是C程序， g++当作是C++程序；
+  - 后缀为 .cpp 的，两者都会认为是 C++程序
+  - 虽然 C++是 C 的超集，但是两者对语法的要求是有区别的 ： printString在 c++ 编译环境下是未定义的
+- 编译和链接的角度：
+  - 编译可以用 gcc/g++； g++会自动调用 gcc，二者等价 。
+  - 链接可以用 g++或者 gcc-lstce++。 因为 gcc 命令不能自动和 c ++程序使用的库链接，所以通常使用 g++来完成链接 。 
+- extern ”C”与 gcc/g++ 并无关系，无论是 gcc 还是 g++，用 extern”C”时，都是以 C 的命名方式来为symbol命名；否则，都以 C++方式命名。
+
+---
+
+
+
+
+
+---
+
 ### C++中的类型转换
 
-##### 7.C++ 中的类型转换
+##### 1.C++ 中的类型转换
 
 + 隐式类型转换：隐式类型转换是自动执行的，无需显式的操作符。 
   + 函数实参到形参的类型转换、函数返回值类型的自动转换等等。
@@ -340,7 +567,7 @@
 
 ---
 
-##### 6.什么是向上类型转换，向下类型转换，以及什么是切割
+##### 2.什么是向上类型转换，向下类型转换，以及什么是切割
 
 + 向上类型转换：是派生类向基类强制类型转换
 
@@ -350,7 +577,7 @@
 
 ---
 
-##### 8.介绍一下四种强制类型转换
+##### 3.介绍一下四种强制类型转换
 
 + `const_cast <new_type> (expression)`
 
@@ -384,7 +611,7 @@
 
 ### C++11重点
 
-##### 0.虚函数与虚指针的原理
+##### ==虚函数与虚指针的原理==
 
 + 编译器发现基类中有虚函数时，会自动为每个含有虚函数的类生成一份一维数组的虚表，保存虚函数的入口地址；虚表可以继承，如果子类没有重写虚函数，那么子类虚表中仍然会有该函数的地址，只不过这个地址指向的是基类的虚函数实现。如果基类3个虚函数，那么基类的虚表中就有三项(虚函数地址)，派生类也会有虚表，至少有三项
 + 如果派生类重写了相应的虚函数，那么虚表中的地址就会改变，指向自身的虚函数实现。如果派生类有自己的虚函数，那么虚表中就会添加该项。
@@ -449,7 +676,7 @@ int main(){
 
 ---
 
-##### 3.内存泄露与内存溢出的区别
+##### ==3.内存泄露与内存溢出的区别==
 
 + 内存溢出：要求分配的内存超出了系统能提供的，系统不能满足要求，于是产生了溢出
 + 内存泄露：向系统申请的内存使用完不归还，new完不进行delete。无法再次利用
