--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -2821,7 +2821,7 @@ std::thread my_thread{background_task()};    // 3
 
 + 面试官您好，我叫张永斌，是一名来自东南大学的网安学院的在读研究生。专业方向是计算机专业。目前的科研方向是5G无线安全算法，研究目的是基于物理层安全，实现可靠高效的5G无线通信安全。在科研项目工程上我主要负责5G小基站项目相关平台开发与维护。
 
-  除了科研外，对后端开发比较感兴趣，学习了计算机相关和后端开发相关的知识，并且尝试了一些小项目进行实践，辅助学习；个人希望未来能够从事互联网开发相关的工作，实现兴趣与工作的相统一。
+  除了科研外，对后端开发比较感兴趣，学习了计算机相关和(后端)开发相关的知识，并且尝试了一些小项目进行实践，辅助学习；个人希望未来能够从事互联网开发相关的工作，实现兴趣与工作的相统一。
 
 
 ---
@@ -2855,7 +2855,7 @@ std::thread my_thread{background_task()};    // 3
 
 ---
 
-##### 4.介绍一下有限状态机
+##### 4.介绍一下有限状态机解析HTTP
 
 表示有限多个状态以及在这些状态之间转移和动作的数学模型。
 
@@ -2905,7 +2905,7 @@ std::thread my_thread{background_task()};    // 3
     5. 主线程调用 epoll_wait 等待 socket 可写
     6. socket 可写时， epoll_wait 通知主线程，主线程将 socket 可写事件放入请求队列
     7. 睡眠在请求队列中的某个工作线程被唤醒，它往 socket 上写入服务器处理客户请求的结果
-+  **Proactor模式：**（I/O操作交给主线程与内核处理，业务逻辑交给业务逻辑）
++  **Proactor模式：**（I/O操作交给主线程与内核处理，业务逻辑交给子线程）
   + 将所有I/O操作都交给主线程和内核处理(读写)，工作线程只负责业务逻辑。
   + 使用异步I/O模型实现的工作流程：
     1. 主线程调用 aio_read 函数向内核注册 socket 上的读完成事件，并告诉内核 用户读缓冲区的位置，以及读操作完成时如何通知应用程序，可用信号
