--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -237,9 +237,38 @@ lsof -c server  #监控程序 。如查看指定程序 server 打开的文件
 lsof -u sharexu #监控用户 。 比如查看指定用户 sharexu 打开的文件
 ```
 
++ lsof -u test   用户打开的文件
++ lsof -p pid    进程号为pid的进程打开的文件
++ lsof -c pro_name     进程名开头为pro_name打开的文件
++ lsof -i tcp     列出所有的tcp连接
++ lsof -i udp    列出所有的udp连接
++ lsof -i tcp:4600    列出占用4600端口的tcp连接
++ lsof -i udp:4600    列出占用4600端口的udp连接
++ lsof -i :4600     列出占用4600端口连接
+
 ---
 
-##### 5.nc命令的使用
+##### 5.ss命令的使用
+
++ ss 列出所有的连接，包括tcp连接、udp连接、unix socket、raw socket
++ ss -t 列出所有tcp连接
++ ss -tl 列出所有处于监听状态的tcp连接
++ ss -u 列出所有的udp连接
++ ss -p 列出连接时显示进程名字和pid
++ ss -s 统计socket
+
+找出某个进程监听的端口号: ss -ltp | grep pro_name
+找出某个端口号被哪个进程占用: ss -p | grep port_num
+列出某个端口上的tcp连接：ss -tenp | grep port_num
+
+> 与lsof的区别：
+>
+> 在查看tcp连接时，ss与lsof的输出信息都差不多，但是ss比lsof更详细。
+> ss可以看到socket的接收和发送队列、ino号
+
+---
+
+##### 6.nc命令的使用
 
 > 通过TCP或UDP协议传输读写数据。还是一个网络应用Debug分析器，可以根据需要创建各种不同类型的网络连接。
 
@@ -941,6 +970,63 @@ int main() {
   + double: 8个字节
   + long long: 8个字节
   + ==long: 8个字节；unsigned long: 8个字节==
+
+---
+
+##### signed char表示的数据范围
+
++ 这个字符变量c的取值范围是【-128,127】
+
+  > 符号位是“1”时，能表示的范围是【10000000， 11111111】。二进制的“10000000”表示的负数计算方式是将8bit全部取反，变成“01111111”，再加上“1”变成“10000000”，此时将其按照无符号数来计算，其10进制是128，再加上负号就是-128； “11111111” 表示的负数计算方式是将8bit全部取反，变成“00000000”，再加上“1”变成“00000001”，此时将其按照无符号数来计算，其10进制是1，再加上负号就是-1。因此，符号位是“1”时，其取值范围是【-128， -1】；
+  >
+  > \2. 符号位是“0”时，能表示的范围是【00000000， 01111111】。二进制的“00000000”其10进制就是0 ，“01111111”其10进制是“2的6次方 + 2的5次方 + 2的4次方 + 2的3次方 + 2的2次方 + 2的1次方 + 2的0次方 ”= “64 + 32 + 16 + 8 + 4 +2 + 1”= 127。因此，符号位是0时，其取值范围是【0， 127】，结合符号位是1的情况，整个signed char的取值范围就是【-128,127】啦！
+
+---
+
+##### float浮点数的表示方法
+
+根据国际标准IEEE 754，任意一个二进制浮点数V可以表示成下面的形式：
+
+$V = (-1)^S * M * 2^E$
+
++ $(-1)^s$表示符号位，当s=0，V为正数；当s=1，V为负数。
++ M表示有效数字，大于等于1，小于2。
++ $2^E$表示指数位。
+
+十进制的5.0，写成二进制是101.0，相当于$1.01×2^2$。那么，按照上面V的格式，可以得出s=0，M=1.01，E=2。
+
+<img src="../图片/float.png" style="zoom:50%;" />
+
+---
+
+##### **memcpy与strcpy的区别**
+
+```c
+char * strcpy(char * dest, const char * src) // 实现src到dest的复制
+{
+　　if ((src == NULL) || (dest == NULL)) //判断参数src和dest的有效性
+　　　　　　return NULL;
+　　char *strdest = dest;        //保存目标字符串的首地址
+　　while ((*strDest++ = *strSrc++)!='\0'); //把src字符串的内容复制到dest下
+　　return strdest;
+}
+void *memcpy(void *memTo, const void *memFrom, size_t size)
+{
+　　if((memTo == NULL) || (memFrom == NULL)) //memTo和memFrom必须有效
+         return NULL;
+　　char *tempFrom = (char *)memFrom;             //保存memFrom首地址
+　　char *tempTo = (char *)memTo;                  //保存memTo首地址      
+　　while(size -- > 0)                //循环size次，复制memFrom的值到memTo中
+       　　*tempTo++ = *tempFrom++ ;  
+　　return memTo;
+}
+```
+
+strcpy和memcpy主要有以下3方面的区别。
+
++ 复制的内容不同。strcpy只能复制字符串，而memcpy可以复制任意内容，例如字符数组、整型、结构体、类等。
++ 复制的方法不同。strcpy不需要指定长度，它遇到被复制字符的串结束符"\0"才结束，所以容易溢出。memcpy则是根据其第3个参数决定复制的长度。
++ 用途不同。通常在复制字符串时用strcpy，而需要复制其他类型数据时则一般用memcpy
 
 ---
 
@@ -5844,6 +5930,35 @@ int main(void){
   
   int ret = sigaction(SIGINT, &act, NULL);
   ```
+
+---
+
+##### ==UNIX域套接字==
+
+**UNIX域套接字用于在同一台机器上运行的进程之间的通信。**虽然因特网域套接字可用于同一目的，但**UNIX域套接字的效率更高**。**UNIX域套接字仅仅复制数据**；它们并不执行协议处理，不需要添加或删除网络报头，无需计算检验和，不要产生顺序号，无需发送确认报文。
+
+**UNIX域套接字提供流和数据报两种接口。UNIX域数据报服务是可靠的**，既不会丢失消息也不会传递出错。**UNIX域套接字是套接字和管道之间的混合物**。为了**创建一对非命名的、相互连接的UNIX域套接字**，用户可以使用它们面向网络的域套接字接口，也**可使用socketpair函数**。
+
+```c
+#include <sys/socket.h>
+int socketpair(int family, int type, int protocol, int sockfd[2]);
+返回值：若成功则返回0，出错则返回-1
+```
+
++ 其中，family为AF_LOCAL, protocol为0，type可以为SOCK_STREAM或者SOCK_DGRAM。新创建的两个套接字描述符作为sockfd[0],sockfd[1]返回。
+
+unix域套接字地址结构如下定义：
+
+```c
+#include <sys/un.h>
+
+struct sockaddr_un {
+    sa_family_t sun_family;/* AF_LOCAL */
+    char sun_path[104];/* 以空字符结尾的字符串 */
+}
+```
+
+
 
 ---
 
