--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -329,6 +329,28 @@
 
 ### 链接与库
 
+##### gcc链接库与头文件
+
++ gcc 与头文件
+
+  + gcc -参数：
+
+    + -I ( i 的大写) ：指定头文件路径（相对路径或绝对路径，建议相对路径）
+
+    + -i ：指定头文件名字 (一般不使用，而是直接放在**.c 文件中通过#include<***.h> 添加)
+
+  + gcc头文件的搜索路径： 头文件 gcc在编译时如何去寻找所需要的头文件：
+
+    + 头文件的搜索会从-I指定的目录开始；
+    + 然后搜索gcc的环境变量 C_INCLUDE_PATH，CPLUS_INCLUDE_PATH，finOBJC_INCLUDE_PATH 设置的目录；
+    + 再搜索系统目录 /usr/include 和 /usr/local/include（centos7中该目录下是空的）；
+    + 最后搜索gcc的一系列自带目录（如/usr/include/c++/4.8.5）。
+
++ gcc与库文件
+  + gcc -参数：
+    + -L ：指定连接的动态库或者静态库路径（相对路径或绝对路径，建议相对路径）
+    + -l (L的小写)：指定需要链接的库的名字（链接 libc.a : -lc 链接动态库：libc.so : -lc）。 注意：-l后面可以直接添加库名省去“lib”和“.so”或“.a”。 -l(L的小写)链接的到底是动态库还是静态库，如果链接路径下同时有 .so 和 .a 那优先链接 .so 。
+
 ##### 1.介绍一下静态库与动态库
 
 - 库是写好的现有的，成熟的，可以复用的代码。本质上是可执行代码的二进制形式。
@@ -2203,7 +2225,32 @@ int fcntl(int fd, int cmd, ...);
 
 ---
 
+##### 17.==UNIX域套接字==
 
+**UNIX域套接字用于在同一台机器上运行的进程之间的通信。**虽然因特网域套接字可用于同一目的，但**UNIX域套接字的效率更高**。**UNIX域套接字仅仅复制数据**；它们并不执行协议处理，不需要添加或删除网络报头，无需计算检验和，不要产生顺序号，无需发送确认报文。
+
+**UNIX域套接字提供流和数据报两种接口。UNIX域数据报服务是可靠的**，既不会丢失消息也不会传递出错。**UNIX域套接字是套接字和管道之间的混合物**。为了**创建一对非命名的、相互连接的UNIX域套接字**，用户可以使用它们面向网络的域套接字接口，也**可使用socketpair函数**。
+
+```c
+#include <sys/socket.h>
+int socketpair(int family, int type, int protocol, int sockfd[2]);
+返回值：若成功则返回0，出错则返回-1
+```
+
++ 其中，family为AF_LOCAL, protocol为0，type可以为SOCK_STREAM或者SOCK_DGRAM。新创建的两个套接字描述符作为sockfd[0],sockfd[1]返回。
+
+unix域套接字地址结构如下定义：
+
+```c
+#include <sys/un.h>
+
+struct sockaddr_un {
+    sa_family_t sun_family;/* AF_LOCAL */
+    char sun_path[104];/* 以空字符结尾的字符串 */
+}
+```
+
+---
 
 ### 2.IO复用
 
